--- a/date/2025-05/page-3.htm
+++ b/date/2025-05/page-3.htm
@@ -3,18 +3,18 @@
 
 <head>
         <link rel="canonical" href="https://sockscap64.github.io" />
-    <title>2025-05归档 - 第2页 - Sockscap64免费机场节点分享官网</title>
+    <title>2025-05归档 - 第4页 - Sockscap64免费机场节点分享官网</title>
         <meta name="keywords" content="2025-05归档Sockscap64免费机场节点分享官网" />
-        <meta name="description" content="2025-05归档，当前是第2页" />
+        <meta name="description" content="2025-05归档，当前是第4页" />
         <link rel="icon" href="/assets/website/img/sockscap64/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="Sockscap64免费机场节点分享官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://sockscap64.github.io" />
     <meta property="og:site_name" content="Sockscap64免费机场节点分享官网" />
-    <meta property="og:title" content="2025-05归档 - 第2页 - Sockscap64免费机场节点分享官网" />
+    <meta property="og:title" content="2025-05归档 - 第4页 - Sockscap64免费机场节点分享官网" />
     <meta property="og:image" content="/assets/website/img/sockscap64/favicon.ico" />
-        <meta property="og:description" content="2025-05归档，当前是第2页" />
+        <meta property="og:description" content="2025-05归档，当前是第4页" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
@@ -26,7 +26,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="2025-05归档 - 第2页 - Sockscap64免费机场节点分享官网">
+    <meta name="apple-mobile-web-app-title" content="2025-05归档 - 第4页 - Sockscap64免费机场节点分享官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -125,6 +125,62 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-05-04">
+                            <div class="col-md-3">
+                                <a href="/news/article-111164.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="docker之SonarQube安装" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-111164.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">docker之SonarQube安装</h3>
+                                </a>
+                                <p>
+                                    目录  一、搜索 sonarqube 镜像 二、拉取镜像 三、运行 四、登录 五、安装中文插件 六、分析项目   1.创建手工项目 2.在过程中生成令牌，复制 maven 命令 3.在 Idea 打开                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-05-04">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-5-4-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/7cd21a68f48876d69af631acc5d9b754.webp" alt="5月4日→18.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-5-4-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">5月4日→18.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、新加坡、美国、加拿大、韩国、香港、欧洲等地区,最高速度可达18.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-05-03">
+                            <div class="col-md-3">
+                                <a href="/news/article-110318.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/fbe402bdb74e22057f867e36ba8365f5.webp" alt="宠物店买的狗粮好吗（宠物店的狗粮都是从哪里来的）" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-110318.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">宠物店买的狗粮好吗（宠物店的狗粮都是从哪里来的）</h3>
+                                </a>
+                                <p>
+                                    摘要：       本篇文章给大家谈谈宠物店买的狗粮好吗，以及宠物店的狗粮都是从哪里来的对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗粮哪里买2、...        本篇                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-05-03">
+                            <div class="col-md-3">
+                                <a href="/news/article-110316.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/f8cf90d508ad3c0519c160f1d4bb1b9e.webp" alt="tensorflow求导和梯度计算" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-110316.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">tensorflow求导和梯度计算</h3>
+                                </a>
+                                <p>
+                                    1.函数求一阶导 import tensorflow as tf tf.enable_eager_execution() tfe=tf.contrib.eager from math import                                  </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-05-03">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-5-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -209,22 +265,8 @@
                                     目录 一、%方式 二、string.format()方式 三、f-string方式  活动地址：CSDN21天学习挑战赛   &nbsp; &nbsp; &nbsp; &nbsp;用%来格式化字符串是                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-05-01">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-5-1-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/f8cf90d508ad3c0519c160f1d4bb1b9e.webp" alt="5月1日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-5-1-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">5月1日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、日本、新加坡、香港、美国、韩国、欧洲等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li><a href="/date/2025-05/page-2.htm">&laquo;</a></li> <li><a href="/date/2025-05/">1</a></li><li><a href="/date/2025-05/page-2.htm">2</a></li><li class="active"><span>3</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                    </div>
+                        <ul class="pagination"><li><a href="/date/2025-05/page-2.htm">&laquo;</a></li> <li><a href="/date/2025-05/">1</a></li><li><a href="/date/2025-05/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/date/2025-05/page-4.htm">4</a></li> <li><a href="/date/2025-05/page-4.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -233,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-99126.htm" title="猫咪的妙三多疫苗隔多久打一针（妙三多猫疫苗间隔时间）">猫咪的妙三多疫苗隔多久打一针（妙三多猫疫苗间隔时间）</a></li>
-                        <li class="py-2"><a href="/news/article-93200.htm" title="vue的自动化路由+分模块管理+路由懒加载">vue的自动化路由+分模块管理+路由懒加载</a></li>
-                        <li class="py-2"><a href="/news/article-108623.htm" title="Python格式化输出的三种方式：%、string.format()、f-string">Python格式化输出的三种方式：%、string.format()、f-string</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-19-node-share.htm" title="5月19日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址">5月19日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-1-free-node-subscribe-links.htm" title="4月1日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址">4月1日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" title="4月9日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">4月9日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-109464.htm" title="国考公务员报名时间2023年下半年（公务员国考报名时间2020年下半年）">国考公务员报名时间2023年下半年（公务员国考报名时间2020年下半年）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-12-free-high-speed-nodes.htm" title="5月12日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址">5月12日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-13-node-share.htm" title="4月13日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">4月13日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-13-free-high-speed-nodes.htm" title="5月13日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">5月13日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-91050.htm" title="动物疫苗的使用方法有哪些种类及作用图片（动物疫苗的使用方法有哪些种类及作用图片视频）">动物疫苗的使用方法有哪些种类及作用图片（动物疫苗的使用方法有哪些种类及作用图片视频）</a></li>
-                        <li class="py-2"><a href="/news/article-94193.htm" title="南京免费领养宠物猫的地方有哪些（南京哪里可以免费领养猫）">南京免费领养宠物猫的地方有哪些（南京哪里可以免费领养猫）</a></li>
+                        <li class="py-2"><a href="/news/article-106102.htm" title="宠物乐园怎么样（宠物乐园门票）">宠物乐园怎么样（宠物乐园门票）</a></li>
                         <li class="py-2"><a href="/news/article-97655.htm" title="广州宠物领养微信群号 广州宠物领养微信群号是多少">广州宠物领养微信群号 广州宠物领养微信群号是多少</a></li>
-                        <li class="py-2"><a href="/news/article-100649.htm" title="中国十大宠物食品公司 中国十大宠物食品公司排名">中国十大宠物食品公司 中国十大宠物食品公司排名</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-11-free-high-speed-nodes.htm" title="5月11日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">5月11日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-12-free-node-subscribe-links.htm" title="4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址">4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-92439.htm" title="深圳市宠物领养之家官网查询电话（深圳宠物领养平台）">深圳市宠物领养之家官网查询电话（深圳宠物领养平台）</a></li>
                     </ul>
     </div>
 </div>
@@ -254,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">31</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
